Fix too big of a transformation

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -79,9 +79,9 @@ body {
 }
 
 #tile1:hover {
-    transform: scale(1.2, 1.2);
-    -ms-transform: scale(1.2, 1.2);
-    -webkit-transform: scale(1.2, 1.2);
+    transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
     z-index: 1;
 }
 
@@ -102,9 +102,9 @@ body {
 }
 
 #tile2:hover {
-    transform: scale(1.2, 1.2);
-    -ms-transform: scale(1.2, 1.2);
-    -webkit-transform: scale(1.2, 1.2);
+    transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
     z-index: 1;
 }
 
@@ -125,9 +125,9 @@ body {
 }
 
 #tile3:hover {
-    transform: scale(1.2, 1.2);
-    -ms-transform: scale(1.2, 1.2);
-    -webkit-transform: scale(1.2, 1.2);
+    transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
     z-index: 1;
 }
 
@@ -148,9 +148,9 @@ body {
 }
 
 #tile4:hover {
-    transform: scale(1.2, 1.2);
-    -ms-transform: scale(1.2, 1.2);
-    -webkit-transform: scale(1.2, 1.2);
+    transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
     z-index: 1;
 }
 
